--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "bcrypt": "^2.0.1",
         "bcrypt-promise": "^2.0.0",
         "body-parser": "^1.18.3",
+        "email-templates": "^4.0.1",
         "express": "^4.16.3",
         "jsonwebtoken": "^8.2.2",
         "morgan": "^1.9.0",
+        "nodemailer": "^4.6.6",
         "passport": "^0.4.0",
         "pg": "^7.4.3",
         "pg-hstore": "^2.3.2",
+        "pug": "^2.0.3",
         "sequelize": "^4.37.10"
     },
     "engines": {
