--- a/package.json
+++ b/package.json
@@ -1,32 +1,59 @@
 {
-    "name": "foodgatsby",
-    "version": "1.0.0",
-    "description": "Food delivery service",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+  "name": "foodgatsby",
+  "version": "1.0.0",
+  "description": "Food delivery service",
+  "main": "build",
+  "scripts": {
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "dev": "node src/server.js",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/server.js",
+    "prestart": "npm run -s build",
+    "test": "eslint src"
+  },
+  "author": "Everistu Olumese::InnoverNG <everistusolumese@gmail.com>",
+  "license": "ISC",
+  "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "bcrypt": "^2.0.1",
+    "bcrypt-promise": "^2.0.0",
+    "body-parser": "^1.18.3",
+    "email-templates": "^4.0.1",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
+    "graphql-relay": "^0.5.5",
+    "jsonwebtoken": "^8.2.2",
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.6.6",
+    "passport": "^0.4.0",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "pug": "^2.0.3",
+    "sequelize": "^4.37.10"
+  },
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
     },
-    "author": "Everistu Olumese::InnoverNG <everistusolumese@gmail.com>",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^2.0.1",
-        "bcrypt-promise": "^2.0.0",
-        "body-parser": "^1.18.3",
-        "email-templates": "^4.0.1",
-        "express": "^4.16.3",
-        "jsonwebtoken": "^8.2.2",
-        "morgan": "^1.9.0",
-        "nodemailer": "^4.6.6",
-        "passport": "^0.4.0",
-        "pg": "^7.4.3",
-        "pg-hstore": "^2.3.2",
-        "pug": "^2.0.3",
-        "sequelize": "^4.37.10"
+    "env": {
+      "node": true
     },
-    "engines": {
-        "node": "8.10.x",
-        "npm": "6.x"
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1
     }
+  },
+  "engines": {
+    "node": "8.10.x",
+    "npm": "6.x"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0"
+  }
 }
