--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
-    "dev": "babel-node src/server.js",
+    "dev": "nodemon src/server.js --exec babel-node",
     "build": "npm run clean && npm run build-babel",
     "start": "node ./build/server.js",
     "postinstall": "npm run -s build",
@@ -15,6 +15,10 @@
   "author": "Everistu Olumese::InnoverNG <everistusolumese@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^2.0.1",
     "bcrypt-promise": "^2.0.0",
@@ -23,7 +27,9 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "graphql-import": "^0.6.0",
     "graphql-relay": "^0.5.5",
+    "graphql-tools": "^3.0.2",
     "jsonwebtoken": "^8.2.2",
     "morgan": "^1.9.0",
     "nodemailer": "^4.6.6",
@@ -32,9 +38,7 @@
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.3",
     "sequelize": "^4.37.10",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0"
+    "uninstall": "0.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -55,6 +59,7 @@
     "npm": "6.x"
   },
   "devDependencies": {
-    "@types/graphql": "^0.13.1"
+    "@types/graphql": "^0.13.1",
+    "nodemon": "^1.17.5"
   }
 }
