Use custom errors

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Everistu Olumese::InnoverNG <everistusolumese@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "apollo-errors": "^1.9.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
