--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,5 @@
     "target": "ES6"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
