--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^2.0.1",
     "bcrypt-promise": "^2.0.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "email-templates": "^4.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
