--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "body-parser": "^1.18.3",
         "email-templates": "^4.0.1",
         "express": "^4.16.3",
+        "express-sslify": "^1.2.0",
         "jsonwebtoken": "^8.2.2",
         "morgan": "^1.9.0",
         "nodemailer": "^4.6.6",
