Revert back to RESTful API

--- a/package.json
+++ b/package.json
@@ -1,63 +1,37 @@
 {
-  "name": "foodgatsby",
-  "version": "1.0.0",
-  "description": "Food delivery service",
-  "main": "build",
-  "scripts": {
-    "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build ./src -s",
-    "dev": "nodemon src/server.js --exec babel-node",
-    "build": "npm run clean && npm run build-babel",
-    "start": "node ./build/server.js",
-    "postinstall": "npm run -s build",
-    "test": "eslint src"
-  },
-  "author": "Everistu Olumese::InnoverNG <everistusolumese@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "apollo-errors": "^1.9.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "bcrypt": "^2.0.1",
-    "bcrypt-promise": "^2.0.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "email-templates": "^4.0.1",
-    "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2",
-    "graphql-import": "^0.6.0",
-    "graphql-relay": "^0.5.5",
-    "graphql-tools": "^3.0.2",
-    "jsonwebtoken": "^8.2.2",
-    "morgan": "^1.9.0",
-    "nodemailer": "^4.6.6",
-    "passport": "^0.4.0",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
-    "pug": "^2.0.3",
-    "sequelize": "^4.37.10",
-    "uninstall": "0.0.0"
-  },
-  "eslintConfig": {
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": 7,
-      "sourceType": "module"
+    "name": "foodgatsby",
+    "version": "1.0.0",
+    "description": "Food delivery service",
+    "main": "build",
+    "scripts": {
+        "clean": "rm -rf build && mkdir build",
+        "build-babel": "babel -d ./build ./src -s",
+        "dev": "nodemon server.js",
+        "build": "npm run clean && npm run build",
+        "start": "node ./build/server.js",
+        "postinstall": "npm run -s build",
+        "test": "eslint src"
     },
-<<<<<<< HEAD
     "author": "Everistu Olumese::InnoverNG <everistusolumese@gmail.com>",
     "license": "ISC",
     "dependencies": {
+        "apollo-errors": "^1.9.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.3",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
         "bcrypt": "^2.0.1",
         "bcrypt-promise": "^2.0.0",
         "body-parser": "^1.18.3",
+        "cors": "^2.8.4",
         "email-templates": "^4.0.1",
         "express": "^4.16.3",
-        "express-sslify": "^1.2.0",
+        "express-graphql": "^0.6.12",
+        "graphql": "^0.13.2",
+        "graphql-import": "^0.6.0",
+        "graphql-relay": "^0.5.5",
+        "graphql-tools": "^3.0.2",
         "jsonwebtoken": "^8.2.2",
         "morgan": "^1.9.0",
         "nodemailer": "^4.6.6",
@@ -65,23 +39,29 @@
         "pg": "^7.4.3",
         "pg-hstore": "^2.3.2",
         "pug": "^2.0.3",
-        "sequelize": "^4.37.10"
-=======
-    "env": {
-      "node": true
->>>>>>> da0d96e94e7394853dea0bfedcdabf10f204622e
+        "sequelize": "^4.37.10",
+        "uninstall": "0.0.0"
     },
-    "rules": {
-      "no-console": 0,
-      "no-unused-vars": 1
+    "eslintConfig": {
+        "extends": "eslint:recommended",
+        "parserOptions": {
+            "ecmaVersion": 7,
+            "sourceType": "module"
+        },
+        "env": {
+            "node": true
+        },
+        "rules": {
+            "no-console": 0,
+            "no-unused-vars": 1
+        }
+    },
+    "engines": {
+        "node": "8.10.x",
+        "npm": "6.x"
+    },
+    "devDependencies": {
+        "@types/graphql": "^0.13.1",
+        "nodemon": "^1.17.5"
     }
-  },
-  "engines": {
-    "node": "8.10.x",
-    "npm": "6.x"
-  },
-  "devDependencies": {
-    "@types/graphql": "^0.13.1",
-    "nodemon": "^1.17.5"
-  }
 }
