--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         }
     },
     "engines": {
-        "node": "8.10.x",
+        "node": "10.x.x",
         "npm": "6.x"
     },
     "devDependencies": {
